--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['arr_0', 'arr_1', 'arr_2', 'arr_3', 'arr_4', 'arr_5', 'arr_6']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "pPriceDA = data['arr_0']\n",
     "pPV = data['arr_1']\n",
     "pPosImb = data['arr_2']\n",
-    "pNegImb = data['arr_3']"
+    "pNegImb = data['arr_3']\n",
+    "n_pv = data['arr_4'].item()\n",
+    "n_dam = data['arr_5'].item()\n",
+    "n_imb = data['arr_6'].item()"
    ]
   },
   {
